WIP: Update filter type with preference change

Bug: 796045
Test: ArcAccessibilityHelperBridgeBrowserTest.UpdateFilterType
Change-Id: I110ebe4fdd581b8528460e430da61e8e87137ef0