chrome/browser/chromeos/arc/accessibility/arc_accessibility_helper_bridge.h
@@ -10,6 +10,7 @@
 #include <set>
 #include <string>
 
+#include "chrome/browser/chromeos/accessibility/accessibility_manager.h"
 #include "chrome/browser/chromeos/arc/accessibility/ax_tree_source_arc.h"
 #include "chrome/browser/ui/app_list/arc/arc_app_list_prefs.h"
 #include "components/arc/common/accessibility_helper.mojom.h"
@@ -109,6 +110,9 @@ class ArcAccessibilityHelperBridge
 
   void OnActionResult(const ui::AXActionData& data, bool result) const;
 
+  void OnAccessibilityStatusChanged(
+      const chromeos::AccessibilityStatusEventDetails& event_details);
+
   AXTreeSourceArc* GetOrCreateFromTaskId(int32_t task_id);
   AXTreeSourceArc* GetOrCreateFromNotificationKey(
       const std::string& notification_key,
@@ -120,6 +124,8 @@ class ArcAccessibilityHelperBridge
   std::map<int32_t, std::unique_ptr<AXTreeSourceArc>> task_id_to_tree_;
   std::map<std::string, std::unique_ptr<CountedAXTree>>
       notification_key_to_tree_;
+  std::unique_ptr<chromeos::AccessibilityStatusSubscription>
+      accessibility_status_subscription_;
 
   DISALLOW_COPY_AND_ASSIGN(ArcAccessibilityHelperBridge);
 };
